# savage-wall-street-tracker

./: .gitignore  CHANGELOG.md  DESIGN.md  HANDOFF.md  LICENSE  README.md  VAULT_READING_LIST.md  pyproject.toml
.claude/: CLAUDE.md  launch.json  settings.json
src/cortex/: api.py  backtest.py  calibration.py  cases.py  cli.py  config.py  discovery.py  mirror.py  rag.py  review.py  thesis.py  volatility_screen.py
src/cortex/sources/: activism.py  committees.py  congress.py  filings.py  fundamentals.py  funds.py  insiders.py  market.py  universe.py
src/cortex/storage/: db.py  schemas.py
src/wst/: api.py  backtest.py  calibration.py  cases.py  cli.py  config.py  discovery.py  mirror.py  rag.py  review.py  signals.py  thesis.py  volatility_screen.py  watchlist.py
src/wst/sources/: activism.py  committees.py  congress.py  filings.py  financialdatasets.py  fundamentals.py  funds.py  insiders.py  market.py  universe.py
src/wst/storage/: db.py  schemas.py
tests/: test_backtest.py  test_calibration.py  test_congress.py  test_insiders.py  test_market.py  test_rag.py  test_review.py  test_storage.py  test_thesis.py
web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: Layout.tsx  ThesisCard.tsx
web/src/components/charts/: AnalysisChart.tsx  PriceChart.tsx  Sparkline.tsx  TickerTape.tsx
web/src/components/ui/: AnimatedNumber.tsx  Badge.tsx  Button.tsx  Card.tsx  ConvictionMeter.tsx  CortexLogo.tsx  Field.tsx  HeaderTicker.tsx  Kpi.tsx  Monogram.tsx  SavageLogo.tsx  StatTile.tsx  States.tsx  TickerLogo.tsx
web/src/lib/: api.ts  motion.ts  types.ts  utils.ts
web/src/views/: AriSpecial.tsx  Calibration.tsx  Congress.tsx  Dashboard.tsx  NewThesis.tsx  ReviewQueue.tsx  StockModal.tsx  SwingScreen.tsx  ThesisDetail.tsx
