[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wst"
version = "0.1.0"
description = "Savage Wall Street Tracker — shared market hub: daily vault dashboard from market + congressional-trade data"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Rob Savage", email = "63321971+robsavage619@users.noreply.github.com" },
]
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "respx>=0.21",
    "ruff",
    "pyright",
]

[project.scripts]
wst = "wst.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wst"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
