[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortex"
version = "0.1.0"
description = "CORTEX — a single-operator quantitative factor-research platform"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Rob Savage", email = "63321971+robsavage619@users.noreply.github.com" },
]
dependencies = [
    "duckdb>=1.5.3",
    "edgartools>=5.31.5",
    "fastapi>=0.136.1",
    "fastembed>=0.8.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]>=0.47.0",
    "yfinance>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "respx>=0.21",
    "ruff",
    "pyright",
]

[project.scripts]
cortex = "cortex.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
